--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="/css/main.css" th:href="@{/css/main.css}" />
 </head>
 <body>
-<div th:fragment="logout" class="logout" sec:authorize="isAuthenticated()">
-    Logged in user: <span sec:authentication="name"></span> |
-    Roles: <span sec:authentication="principal.authorities"></span>
-    <div>
-        <form action="#" th:action="@{/logout}" method="post">
-            <input type="submit" value="Logout" />
-        </form>
-    </div>
-</div>
+<!--<div th:fragment="logout" class="logout" sec:authorize="isAuthenticated()">-->
+    <!--Logged in user: <span sec:authentication="name"></span> |-->
+    <!--Roles: <span sec:authentication="principal.authorities"></span>-->
+    <!--<div>-->
+        <!--<form action="#" th:action="@{/logout}" method="post">-->
+            <!--<input type="submit" value="Logout" />-->
+        <!--</form>-->
+    <!--</div>-->
+<!--</div>-->
 <h1>Hello Spring Security</h1>
-<p>This is an unsecured page, but you can access the secured pages after authenticating.</p>
-<ul>
-    <li>Go to the <a href="/user/index" th:href="@{/user/index}">secured pages</a></li>
-</ul>
+<p>这里是官网首页</p>
+<!--<ul>-->
+    <!--<li>Go to the <a href="/user/index" th:href="@{/user/index}">secured pages</a></li>-->
+<!--</ul>-->
 </body>
 </html>
