thymeleaf security标签不生效处理

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -16,6 +16,6 @@
                 </form>
             </div>
         </div>
-        <a href="/book/list.html">图书列表</a>
+        <a href="/book/list">图书列表</a>
     </body>
 </html>
